--- a/Mercurial.Net/Mercurial.Net.csproj
+++ b/Mercurial.Net/Mercurial.Net.csproj
@@ -134,6 +134,7 @@
     <Compile Include="BranchesCommand.cs" />
     <Compile Include="BranchHead.cs" />
     <Compile Include="BundleCommand.cs" />
+    <Compile Include="CachedPersistentClientFactory.cs" />
     <Compile Include="CatCommand.cs" />
     <Compile Include="Changeset.cs" />
     <Compile Include="ChangesetPathAction.cs" />
@@ -183,6 +184,7 @@
     <Compile Include="Hooks\MercurialPushKeyHook.cs" />
     <Compile Include="Hooks\MercurialTagHook.cs" />
     <Compile Include="Hooks\MercurialUpdateHook.cs" />
+    <Compile Include="ICachedPersistentClientFactory.cs" />
     <Compile Include="IClient.cs" />
     <Compile Include="IClientFactory.cs" />
     <Compile Include="IClientSwitcher.cs" />
