--- a/hglib-cli/hglib-cli.csproj
+++ b/hglib-cli/hglib-cli.csproj
@@ -22,6 +22,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Debug\Mercurial.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -56,6 +57,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="CommandClient.cs" />
+    <Compile Include="CommandClientFactory.cs" />
     <Compile Include="ServerException.cs" />
     <Compile Include="CommandChannel.cs" />
     <Compile Include="CommandMessage.cs" />
